--- a/1/2.html
+++ b/1/2.html
@@ -2,11 +2,13 @@
 <head>
     <script>
         function showAlert() {
-            alert("This is an internal script alert!");
+            alert("This is a demonstratio for Kushi, Neha and Kajal");
         }
     </script>
 </head>
 <body>
+    <h1>Example 1.2</h1>
+
     <button onclick="showAlert()">Click Me</button>
 </body>
 </html>
