--- a/2/1.html
+++ b/2/1.html
@@ -1,7 +1,23 @@
-<button onclick="changeBackground()">Change Background</button>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Demo</title>
 
-<script>
-    function changeBackground() {
+    <style>
+      body {
+        background-color: red;
+      }
+    </style>
+  </head>
+  <body>
+    <button onclick="changeBackground()">Change Background</button>
+
+    <script>
+      function changeBackground() {
         document.body.style.backgroundColor = "lightblue";
-    }
-</script>
+      }
+    </script>
+  </body>
+</html>
