--- a/1/1.html
+++ b/1/1.html
@@ -1,1 +1,5 @@
-<button onclick="alert('Hello, JavaScript!')">Click Me</button>
+<h1>Example 1.1</h1>
+
+<button onclick="alert('Hello, JavaScript!')">
+    Click Me
+</button>
