--- a/1/3.html
+++ b/1/3.html
@@ -3,6 +3,7 @@
     <script src="3.js"></script>
   </head>
   <body>
-    <button onclick="showAlert()">Click Me</button>
+    <h1>Example 1.3</h1>
+    <button onclick="greet()">Click Me</button>
   </body>
 </html>
