--- a/3/1.html
+++ b/3/1.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <script>
-        let name = "Alice"; // String
+        let name = "Khushi"; // String
         let age = 25; // Number
         let isStudent = true; // Boolean 0 = false , 1 = true
 
